<resources>

    <!--HAUPTMENU STRINGS-->
    <string name="app_name">Hauptmenu</string>
    <string name="intro_text">AppName</string>
    <string name="btn_fernsteuern">Fernsteuern</string>
    <string name="btn_autonom">Autonom</string>
    <string name="btn_einstellung">Einstellung</string>
    <string name="app_logo">Logo für die App</string>


    <string name="backToInitMenu">Zurück</string>


    <!--FERNSTEURN-->
    <string name="Lenkwinkel">Lenkwinkel: - </string>
    <string name="Geschwindigkeit">Geschwindigkeit: - </string>
    <string name="Lenkrichtung">Lenkrichtung: - </string>
    <string name="btn_bilderaufnahme_start_text">Bilder aufnehmen</string>
    <string name="btn_bilderaufnahme_stop_text">Aufnahme stoppen</string>

    <!--EINSTELLUNG-->
    <string name="upload_data_text">Daten automatisch hochladen</string>
    <string name="anzahlBilder">Wie oft die Sekunde sollen im autonomen Modus Bilder aufgenommen werden?</string>
    <string name="zugangsdata_text">Zugangsdaten zu Google Drive: </string>
    <string name="Welches_NN">Welches Neuronale Netz soll genutzt werden?</string>
    <string name="Welche_Aufloesung">Welche Auflösung soll bei den Aufnahmen genutzt werden?</string>
    <string name="Bildbereich">Welcher Bildbereich soll für die Aufnahmen verwendet werden?</string>
    <string name="Bildbereich_Button">Bildbereich bestätigen</string>
    <string name="ausloggen">Sign out</string>


</resources>
