<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightblueColor"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="731dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="240dp"
            android:layout_height="320dp"
            android:layout_marginTop="50dp">
        </FrameLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:text="@string/Lenkwinkel" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/Geschwindigkeit" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Lenkrichtung" />

        <Button
            android:id="@+id/button4"
            style="@style/btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="132dp"
            android:onClick="toggleAufnahme"
            android:text="@string/btn_bilderaufnahme_start_text" />

    </LinearLayout>


</LinearLayout>

